test/testdata/functions/mutually_recursive_local_error.lox
{
    fun isEven(n) {
        if (n == 0) {
            return true;
        }
        return isOdd(n - 1); // error: isOdd has not been declared
    }

    // error: isOdd has been declared but is never used
    fun isOdd(n) {
        if (n == 0) {
            return false;
        }
        return isEven(n - 1);
    }

    print isEven(3);
}
